se trabajaron condicionales anidados y operadores logicos

--- a/python1.ipynb
+++ b/python1.ipynb
@@ -110,6 +110,109 @@
     "else:\n",
     "    print(f\"{number_a} Es menor a 1\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bienvenido a la escupidera de salty\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Condicionaes anidados\n",
+    "# validar el ingreso a una discoteca\n",
+    "# La disco esta abierta, viernes y sabado, a partir de las 20H\n",
+    "# Solo pueden pasar los mayores de edad\n",
+    "\n",
+    "def verify_day(day):\n",
+    "    if (day == 'viernes') or (day == 'sabado'):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return print(\"No abrimos hoy\")\n",
+    "\n",
+    "def verify_hour(hour):\n",
+    "    if 25 > hour > 19:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return print(\"No esta dentro del rango horario\")\n",
+    "    \n",
+    "def verify_age(age):\n",
+    "    if age > 17:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return print(\"No tiene edad suficiente\")\n",
+    "    \n",
+    "if verify_day(input(\"Que dia es hoy\").lower()) == True:\n",
+    "    if verify_hour(int(input(\"Que dia es hoy\"))) == True:\n",
+    "        if verify_age(int(input(\"cual es su edad\"))) == True:\n",
+    "            print(\"Bienvenido a la escupidera de salty\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = input('Cual es su nombre?:').title()\n",
+    "print(f'Hola {name}')\n",
+    "\n",
+    "week_day = input('En que dia deseas entrar a la discoteca?: ').lower().strip()\n",
+    "time = int(input('A que hora quieres ingresar?: '))\n",
+    "age = int(input('Cuantos años tiene: '))\n",
+    "\n",
+    "if (week_day == 'viernes' or week_day == 'sabado') and (time >= 20) and (age >= 18):\n",
+    "    print(f'Bienvenido {name}')\n",
+    "\n",
+    "elif not (week_day == 'viernes' or week_day == 'sabado'):\n",
+    "    print('Hoy la discoteca esta cerrada')\n",
+    "\n",
+    "elif not (time >= 20):\n",
+    "    print(\"Aun no estamos abiertos\")\n",
+    "\n",
+    "elif not (age >= 18):\n",
+    "    print(\"Fuera de aqui menor!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = input('Cual es su nombre?:').title()\n",
+    "print(f'Hola {name}')\n",
+    "\n",
+    "week_day = input('En que dia deseas entrar a la discoteca?: ').lower().strip()\n",
+    "\n",
+    "if (week_day == 'viernes') or (week_day == 'sabado'):\n",
+    "    print(f'Muy bien, es {week_day}')\n",
+    "    time = int(input('A que hora quieres ingresar?: '))\n",
+    "\n",
+    "    if 25 > time > 19:\n",
+    "        print(f'Muy bien, esta en el rango horario indicado')\n",
+    "        age = int(input('Cuantos años tiene: '))\n",
+    "\n",
+    "        if age >= 18:\n",
+    "            print(f'Bienvenido {name}, pase adelante')\n",
+    "\n",
+    "        else:\n",
+    "            print('No tiene suficiente edad')\n",
+    "\n",
+    "    else:\n",
+    "        print('La discoteca esta cerrada')\n",
+    "\n",
+    "else:\n",
+    "        print('La discoteca esta cerrada hoy')"
+   ]
   }
  ],
  "metadata": {
