--- a/python1.ipynb
+++ b/python1.ipynb
@@ -213,6 +213,61 @@
     "else:\n",
     "        print('La discoteca esta cerrada hoy')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Es fin de semana, vamos a la playa!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Condicionales encadenados\n",
+    "week_day = input(\"Ingres el dia de la semana: \").lower()\n",
+    "\n",
+    "if week_day == \"lunes\":\n",
+    "    print(f\"{week_day} es el 1er dia de la semana\")\n",
+    "\n",
+    "elif week_day == \"martes\":\n",
+    "    print(f\"{week_day} es el 2do dia de la semana\")\n",
+    "\n",
+    "elif week_day == \"miercoles\":\n",
+    "    print(f\"{week_day} es el 3er dia de la semana\")\n",
+    "\n",
+    "elif week_day == \"jueves\":\n",
+    "    print(f\"{week_day} es el 4to dia de la semana\")\n",
+    "\n",
+    "elif week_day == \"viernes\":\n",
+    "    print(f\"{week_day} es el 5to dia de la semana\")\n",
+    "\n",
+    "else:\n",
+    "    print(f\"Es fin de semana, vamos a la playa!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "week_day = input(\"Ingres el dia de la semana: \").lower()\n",
+    "\n",
+    "week_dict = {\n",
+    "    \"lunes\" : \"1er\",\n",
+    "    \"martes\" : \"2do\",\n",
+    "    \"miercoles\" : \"3er\",\n",
+    "    \"jueves\" : \"4to\",\n",
+    "    \"viernes\" : \"5to\",\n",
+    "    \"sabado\" : \"6to\",\n",
+    "    \"domingo\" : \"7to\"\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
