--- a/python1.ipynb
+++ b/python1.ipynb
@@ -252,12 +252,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Por favor, escriba un dia de la semana\n",
+      "Por favor, escriba un dia de la semana\n",
+      "Por favor, escriba un dia de la semana\n",
+      "lunes es el 1er de la semana\n"
+     ]
+    }
+   ],
    "source": [
-    "week_day = input(\"Ingres el dia de la semana: \").lower()\n",
-    "\n",
     "week_dict = {\n",
     "    \"lunes\" : \"1er\",\n",
     "    \"martes\" : \"2do\",\n",
@@ -266,7 +275,93 @@
     "    \"viernes\" : \"5to\",\n",
     "    \"sabado\" : \"6to\",\n",
     "    \"domingo\" : \"7to\"\n",
-    "}"
+    "}\n",
+    "\n",
+    "while True:\n",
+    "    try:\n",
+    "        week_day = input(\"Ingres el dia de la semana: \").lower()\n",
+    "        print(f\"{week_day} es el {week_dict[week_day]} de la semana\")\n",
+    "        break\n",
+    "    except:\n",
+    "        print(\"Por favor, escriba un dia de la semana\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ciclos finitos: for"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lunes\n",
+      "Martes\n",
+      "Miercoles\n",
+      "Jueves\n",
+      "Miercoles\n",
+      "Sabado\n",
+      "Domingo\n"
+     ]
+    }
+   ],
+   "source": [
+    "week_days = [\"Lunes\", \"Martes\", \"Miercoles\", \"Jueves\", \"Miercoles\", \"Sabado\"]\n",
+    "week_days.append(\"Domingo\")\n",
+    "\n",
+    "for days in week_days:\n",
+    "    print(days)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hoy es Lunes\n"
+     ]
+    }
+   ],
+   "source": [
+    "week = input('Que dia es hoy')\n",
+    "\n",
+    "if week in week_days:\n",
+    "    print(f\"hoy es {week}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No encontre el papas :(((((\n"
+     ]
+    }
+   ],
+   "source": [
+    "search = input('Que dia es hoy')\n",
+    "\n",
+    "for day in week_days:\n",
+    "    if day == search:\n",
+    "        print(f\"Encontre el {search}!!!\")\n",
+    "    else:\n",
+    "        print(f\"No encontre el {search} :(((((\")\n",
+    "        break\n"
    ]
   }
  ],
