--- a/python1.ipynb
+++ b/python1.ipynb
@@ -363,6 +363,77 @@
     "        print(f\"No encontre el {search} :(((((\")\n",
     "        break\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "! se paso de alcagueta, pruebe otra vez!\n",
+      "! se paso de alcagueta, pruebe otra vez!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Piedra papel o tijera\n",
+    "\n",
+    "user_1 = input(\"Jugador 1, ingrese su nombre: \").title()\n",
+    "user_2 = input(\"Jugador 2, ingrese su nombre: \").title()\n",
+    "\n",
+    "choice_1 = input(f\"{user_1}, elija entre piedra, papel o tijera:\").lower()\n",
+    "choice_2 = input(f\"{user_2}, elija entre piedra, papel o tijera:\").lower()\n",
+    "\n",
+    "if choice_1 == choice_2:\n",
+    "    print(f\"{user_1}, {user_2}, los dos perdieron!\")\n",
+    "\n",
+    "elif choice_1 == \"tijera\":\n",
+    "    if choice_2 == \"piedra\":\n",
+    "        print(f\"{user_1}, ganaste\")\n",
+    "    elif choice_2 == \"papel\":\n",
+    "        print(f\"{user_2}, ganaste\")\n",
+    "\n",
+    "elif choice_1 == \"papel\":\n",
+    "    if choice_2 == \"piedra\":\n",
+    "        print(f\"{user_1}, ganaste\")\n",
+    "    elif choice_2 == \"tijera\":\n",
+    "        print(f\"{user_2}, ganaste\")\n",
+    "\n",
+    "elif choice_1 == \"piedra\":\n",
+    "    if choice_2 == \"tijera\":\n",
+    "        print(f\"{user_1}, ganaste\")\n",
+    "    elif choice_2 == \"papel\":\n",
+    "        print(f\"{user_2}, ganaste\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"Aqui nadie es serio\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# choice_1 = input(f\"{user_1}, elija entre piedra, papel o tijera:\").lower()\n",
+    "# choice_2 = input(f\"{user_2}, elija entre piedra, papel o tijera:\").lower()\n",
+    "\n",
+    "# options = {\n",
+    "#     \"tijera\": 1,\n",
+    "#     \"piedra\": 2,\n",
+    "#     \"papel\": 3\n",
+    "# }\n",
+    "\n",
+    "# if not choice_1 in options:\n",
+    "#     print(\"MANCO\")\n",
+    "# if not choice_2 in options:\n",
+    "#     print(\"Que chad\")\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
